# multi-components

./: .gitignore  API_CPP.md  API_JAVA.md  API_PYTHON.md
libreria_cpp/: CMakeLists.txt  build_all.bat
libreria_cpp/client/: prueba.cpp
libreria_cpp/docs/: Doxyfile  Doxyfile.bak
libreria_cpp/docs/html/: annotated.html  annotated_dup.js  class_verificador_d_n_i-members.html  class_verificador_d_n_i.html  class_verificador_d_n_i.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dni__utils_8cpp.html  dni__utils_8cpp.js  dni__utils_8h.html  dni__utils_8h.js  dni__utils_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  navtreedata.js  navtreeindex0.js
libreria_cpp/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  defines_0.js  files_0.js  functions_2.js  searchdata.js
libreria_cpp/src/: dni_utils.cpp  dni_utils.h
libreria_java/: build_all.bat
libreria_java/client/: Main.java
libreria_java/docs/javadoc/: Main.html  allclasses-index.html  allpackages-index.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-summary.html  package-tree.html  type-search-index.js
libreria_java/docs/javadoc/com/example/: DNIUtils.html  (+2 more)
microservicio_python/: build_all.bat  requirements.txt
microservicio_python/app/: convert.py  dni_utils.py  main.py
microservicio_python/client/: client.py
(+1 files in other folders)
